# JAM-G19-Colors

./: .gitignore  README.md  jam_g19_colors.py  jam_g19_colors.spec  pyproject.toml
scripts/: build.py
